Update: Added InteractionManager, EffectManager, and modified existing files for new functionality